# nusku

./: .gitattributes  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  main.rs  tui.rs
engine/: Cargo.toml
engine/src/: aggregator.rs  lib.rs  permissions.rs  process_cpu.rs  profiler.rs  snapshot.rs
engine/src/libs/: memory.rs  mod.rs  permissions.rs  sample_window.rs  symbols.rs
nusku-core/: Cargo.toml
nusku-ebpf/: Cargo.toml
profiler/: Cargo.toml  build.rs
profiler/src/: cpu.rs  lib.rs
profiler/src/bpf/: cpu_sampler.bpf.c  vmlinux.h
