[workspace]
members = [
    "cli",
    "engine",
    "profiler",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
blazesym = "0.2.3"
clap = { version = "4.6.0", features = ["derive"] }
libbpf-rs = "0.26.1"
tokio = "1.51.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
libc = "0.2"
ctrlc = "3.5.2"
