[package]
name = "nusku"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = {path = "../engine"}
profiler = {path = "../profiler"}
anyhow    = { workspace = true }
clap      = { workspace = true }
tokio     = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber  = { workspace = true }
ctrlc = { workspace = true}
